--- a/requirements.txt
+++ b/requirements.txt
@@ -1,173 +1,17 @@
 keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
-keyring @ file:///tmp/build/80754af9/keyring_1614616746024/work
-kiwisolver @ file:///tmp/build/80754af9/kiwisolver_1612282414123/work
-lazy-object-proxy @ file:///tmp/build/80754af9/lazy-object-proxy_1616529086024/work
-lesscpy==0.14.0
-libarchive-c @ file:///tmp/build/80754af9/python-libarchive-c_1617780486945/work
-llvmlite==0.36.0
-locket==0.2.1
-lxml @ file:///tmp/build/80754af9/lxml_1616442912239/work
-Markdown==3.3.4
-MarkupSafe @ file:///tmp/build/80754af9/markupsafe_1594371495811/work
-matplotlib @ file:///tmp/build/80754af9/matplotlib-suite_1613407855456/work
-mccabe==0.6.1
-mistune @ file:///tmp/build/80754af9/mistune_1594373098390/work
-mkl-fft==1.3.0
-mkl-random @ file:///tmp/build/80754af9/mkl_random_1618853974840/work
-mkl-service==2.3.0
-mock @ file:///tmp/build/80754af9/mock_1607622725907/work
-more-itertools @ file:///tmp/build/80754af9/more-itertools_1613676688952/work
-mpmath==1.2.1
-msgpack @ file:///tmp/build/80754af9/msgpack-python_1612287175283/work
-multipledispatch==0.6.0
-navigator-updater==0.2.1
-nbclassic @ file:///tmp/build/80754af9/nbclassic_1616085367084/work
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///tmp/build/80754af9/nbconvert_1601914821128/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-networkx @ file:///tmp/build/80754af9/networkx_1617653298338/work
-nltk @ file:///tmp/build/80754af9/nltk_1618327084230/work
-nose @ file:///tmp/build/80754af9/nose_1606773131901/work
-notebook @ file:///tmp/build/80754af9/notebook_1616443455024/work
-numba @ file:///tmp/build/80754af9/numba_1616774249101/work
-numexpr @ file:///tmp/build/80754af9/numexpr_1618856527787/work
-numpy==1.19.5
-numpydoc @ file:///tmp/build/80754af9/numpydoc_1605117425582/work
-oauthlib==3.1.1
-olefile==0.46
-openpyxl @ file:///tmp/build/80754af9/openpyxl_1615411699337/work
-opt-einsum==3.3.0
-packaging @ file:///tmp/build/80754af9/packaging_1611952188834/work
+Flask>=1.1.1
+Jinja2>=2.10.3
+SQLAlchemy>=1.3.11
+gunicorn>=20.0.0
+flask_sqlalchemy>=2.0.0
+psycopg2==2.8.6
 pandas==1.2.4
-pandocfilters @ file:///tmp/build/80754af9/pandocfilters_1605120451932/work
-parso==0.5.2
-partd @ file:///tmp/build/80754af9/partd_1618000087440/work
-path @ file:///tmp/build/80754af9/path_1614022219955/work
-pathlib2 @ file:///tmp/build/80754af9/pathlib2_1607024979554/work
-pathtools==0.1.2
-patsy==0.5.1
-pep8==1.7.1
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow @ file:///tmp/build/80754af9/pillow_1617386154241/work
-pkginfo==1.7.0
-pluggy @ file:///tmp/build/80754af9/pluggy_1615976314111/work
-ply==3.11
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1618088486455/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
-protobuf==3.17.2
-psutil @ file:///tmp/build/80754af9/psutil_1612298016854/work
 psycopg2-binary==2.8.6
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-py @ file:///tmp/build/80754af9/py_1607971587848/work
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycodestyle @ file:///home/ktietz/src/ci_mi/pycodestyle_1612807597675/work
-pycosat==0.6.3
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pycrypto==2.6.1
-pycurl==7.43.0.6
-pydocstyle @ file:///tmp/build/80754af9/pydocstyle_1616182067796/work
-pyerfa @ file:///tmp/build/80754af9/pyerfa_1613848714600/work
-pyflakes @ file:///home/ktietz/src/ci_ipy2/pyflakes_1612551159640/work
-Pygments @ file:///tmp/build/80754af9/pygments_1615143339740/work
-pylint @ file:///tmp/build/80754af9/pylint_1617135828964/work
-pymongo==3.11.3
-pyodbc===4.0.0-unsupported
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1608057966937/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyrsistent @ file:///tmp/build/80754af9/pyrsistent_1600141707582/work
-PySocks @ file:///tmp/build/80754af9/pysocks_1594394576006/work
-pytest==6.2.3
-python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
-python-jsonrpc-server @ file:///tmp/build/80754af9/python-jsonrpc-server_1600278539111/work
-python-language-server==0.31.7
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
-PyWavelets @ file:///tmp/build/80754af9/pywavelets_1601658308664/work
-pyxdg @ file:///tmp/build/80754af9/pyxdg_1603822279816/work
-PyYAML==5.4.1
-pyzmq==20.0.0
-QDarkStyle @ file:///tmp/build/80754af9/qdarkstyle_1617386714626/work
-QtAwesome @ file:///tmp/build/80754af9/qtawesome_1615991616277/work
-qtconsole @ file:///tmp/build/80754af9/qtconsole_1616775094278/work
-QtPy==1.9.0
-regex @ file:///tmp/build/80754af9/regex_1617569716423/work
-requests @ file:///tmp/build/80754af9/requests_1608241421344/work
-requests-oauthlib==1.3.0
-rope @ file:///tmp/build/80754af9/rope_1602264064449/work
-rsa==4.7.2
-Rtree @ file:///tmp/build/80754af9/rtree_1618420842307/work
-ruamel-yaml-conda @ file:///tmp/build/80754af9/ruamel_yaml_1616016701961/work
-scikit-image==0.18.1
-scikit-learn @ file:///tmp/build/80754af9/scikit-learn_1614445567925/work
-scipy @ file:///tmp/build/80754af9/scipy_1618852618548/work
-seaborn @ file:///tmp/build/80754af9/seaborn_1608578541026/work
-SecretStorage @ file:///tmp/build/80754af9/secretstorage_1614022884812/work
-selenium==3.141.0
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
-simplegeneric==0.8.1
-singledispatch @ file:///tmp/build/80754af9/singledispatch_1614366001199/work
-six @ file:///tmp/build/80754af9/six_1605205313296/work
-sniffio @ file:///tmp/build/80754af9/sniffio_1614030478629/work
-snowballstemmer @ file:///tmp/build/80754af9/snowballstemmer_1611258885636/work
-sortedcollections @ file:///tmp/build/80754af9/sortedcollections_1611172717284/work
-sortedcontainers @ file:///tmp/build/80754af9/sortedcontainers_1606865132123/work
-soupsieve @ file:///tmp/build/80754af9/soupsieve_1616183228191/work
-Sphinx @ file:///tmp/build/80754af9/sphinx_1618217326527/work
-sphinxcontrib-applehelp @ file:///home/ktietz/src/ci/sphinxcontrib-applehelp_1611920841464/work
-sphinxcontrib-devhelp @ file:///home/ktietz/src/ci/sphinxcontrib-devhelp_1611920923094/work
-sphinxcontrib-htmlhelp @ file:///home/ktietz/src/ci/sphinxcontrib-htmlhelp_1611920974801/work
-sphinxcontrib-jsmath @ file:///home/ktietz/src/ci/sphinxcontrib-jsmath_1611920942228/work
-sphinxcontrib-qthelp @ file:///home/ktietz/src/ci/sphinxcontrib-qthelp_1611921055322/work
-sphinxcontrib-serializinghtml @ file:///home/ktietz/src/ci/sphinxcontrib-serializinghtml_1611920755253/work
-sphinxcontrib-websupport @ file:///tmp/build/80754af9/sphinxcontrib-websupport_1597081412696/work
-splinter==0.14.0
-spyder==4.0.1
-spyder-kernels==1.8.1
-SQLAlchemy @ file:///tmp/build/80754af9/sqlalchemy_1618089545514/work
-states==0.2.1
-statsmodels @ file:///tmp/build/80754af9/statsmodels_1614023743307/work
-sympy @ file:///tmp/build/80754af9/sympy_1618255317417/work
-tables==3.6.1
-tblib @ file:///tmp/build/80754af9/tblib_1597928476713/work
 tensorboard==2.5.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
 tensorflow==2.5.0
 tensorflow-estimator==2.5.0
 termcolor==1.1.0
-terminado==0.9.4
-testpath @ file:///home/ktietz/src/ci/testpath_1611930608132/work
-text-unidecode==1.3
-threadpoolctl @ file:///tmp/tmp9twdgx9k/threadpoolctl-2.1.0-py3-none-any.whl
-tifffile @ file:///tmp/build/80754af9/tifffile_1617396826939/work
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-toolz @ file:///home/linux1/recipes/ci/toolz_1610987900194/work
-tornado @ file:///tmp/build/80754af9/tornado_1606942283357/work
-tqdm @ file:///tmp/build/80754af9/tqdm_1615925068909/work
-traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
-typed-ast @ file:///tmp/build/80754af9/typed-ast_1610484562261/work
-typing-extensions @ file:///home/ktietz/src/ci_mi/typing_extensions_1612808209620/work
-ujson @ file:///tmp/build/80754af9/ujson_1611259506266/work
-unicodecsv==0.14.1
-urllib3 @ file:///tmp/build/80754af9/urllib3_1615837158687/work
-us==2.0.2
-watchdog @ file:///tmp/build/80754af9/watchdog_1612471130876/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
-webdriver-manager==3.3.0
-webencodings==0.5.1
-Werkzeug @ file:///home/ktietz/src/ci/werkzeug_1611932622770/work
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-wurlitzer @ file:///tmp/build/80754af9/wurlitzer_1617224660745/work
-xlrd @ file:///tmp/build/80754af9/xlrd_1608072521494/work
-XlsxWriter @ file:///tmp/build/80754af9/xlsxwriter_1617224712951/work
-xlwt==1.3.0
-xmltodict==0.12.0
-yapf @ file:///tmp/build/80754af9/yapf_1615749224965/work
-zict==2.0.0
-zipp @ file:///tmp/build/80754af9/zipp_1615904174917/work
-zope.event==4.5.0
-zope.interface @ file:///tmp/build/80754af9/zope.interface_1616355130737/work
+numpy==1.19.5
