Changed tensorflow to tensorflow-cpu due to herku file size limit.

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ psycopg2-binary==2.8.6
 tensorboard==2.5.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
-tensorflow==2.5.0
+tensorflow-cpu==2.5.0
 tensorflow-estimator==2.5.0
 termcolor==1.1.0
 numpy==1.19.5
